--- a/src/VNEDC/bases/templates/bases/base.html
+++ b/src/VNEDC/bases/templates/bases/base.html
@@ -16,18 +16,19 @@
     <link rel="stylesheet" href="{% static 'base/css/base.css' %}">
 
     <!-- CSS jsGrid -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jsgrid/dist/jsgrid.min.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jsgrid/dist/jsgrid-theme.min.css" />
+    <link rel="stylesheet" href="{% static 'jsgrid-1.5.3/jsgrid.min.css' %}" />
+    <link rel="stylesheet" href="{% static 'jsgrid-1.5.3/jsgrid-theme.min.css' %}" />
 
 
     <script src="{% static 'jquery/jquery-3.3.1.min.js' %}"></script>
     <script src="{% static 'jquery-ui/jquery-ui.min.js' %}"></script>
     <script src="{% static 'base/js/umd/popper.js' %}"></script>
-    <script src="{% static 'base/js/func.js' %}"></script>
     <script src="{% static 'bootstrap-4.1.3/js/bootstrap.min.js' %}"></script>
     <!-- jquery-loading v1.3.0 -->
     <script src="{% static 'jquery.loading/js/jquery.loading.min.js' %}"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jsgrid/dist/jsgrid.min.js"></script>
+    <script src="{% static 'jsgrid-1.5.3/jsgrid.min.js' %}"></script>
+    <script src="{% static 'base/js/func.js' %}"></script>
+
 
     {% block head %}
 
